2002-09-09  Mark Salter  <msalter@redhat.com>

	* inflate.c (inflate): Fix CRC calculation over multiple invocations
	with same output buffer. 
	
2002-02-18  Jesper Skov  <jskov@redhat.com>

	* src/infblock.c: Applied fix for double-free which could cause a
	zlib crash. Fixed indentation.

2001-10-15  Gary Thomas  <gthomas@redhat.com>

	* include/zconf.h: 
	* cdl/compress_zlib.cdl: 
	Define new interface CYGINT_COMPRESS_ZLIB_LOCAL_ALLOC which allows
	users of this code (applications) to provide their own allocators.

2001-04-02  Jesper Skov  <jskov@redhat.com>

	* tests/zlib2.c: Removed BAD_CRC state.

2001-03-12  Jesper Skov  <jskov@redhat.com>

	* src/inflate.c: Remove BAD_CRC state. Do separate CRC for
	gzippped data.
	* include/zlib.h: Removed Z_BAD_CRC hack. Rename crc32 function.
	* src/crc32.c: Include zlib.h header from
	include/cyg/compress. Rename function.
	* cdl/compress_zlib.cdl: Build the crc32.c file.

2001-03-09  Jesper Skov  <jskov@redhat.com>

	* src/compress.c: Include zlib.h header from include/cyg/compress.
	* src/uncompr.c: Same.	
	* tests/zlib1.c: Added.
	* tests/zlib2.c: Added.
	* cdl/compress_zlib.cdl: Compile tests. Compile
	files holding compress/uncompress functions.

	* cdl/compress_zlib.cdl: Don't warn about prototypes when building.

2001-03-08  Jesper Skov  <jskov@redhat.com>

	* cdl/compress_zlib.cdl: Add isoinfra requirement.

	* include/zconf.h: Override STDC check.

	* include/zlib.h: Added new BAD_CRC return type. Comment out crc32
	declaration.

	* src/inflate.c: Added additional states to allow for gzip header
	decoding.
	
	* src/adler32.c: Include zlib.h header from include/cyg/compress.
	* src/zutil.h: Same.
	
	* Import zlib 1.1.3 sources, but leave out some sub
	directories. See src/README.eCos for details.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------